// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getAllEnvs() > should return all envs for app1 1`] = `
[
  "dev",
  "review",
  "stage",
  "prod",
  "local",
]
`;

exports[`getAllEnvs() > should return all envs for app2 1`] = `
[
  "dev",
  "review",
  "stage",
  "prod",
  "local",
  "dev2",
  "review2",
  "stage2",
  "prod2",
]
`;

exports[`getAllEnvs() > should return all envs for app3 1`] = `
[
  "local",
]
`;
